# app/Http/Controllers/Annotations/RegisterAnnotationController.php
@@ -1,62 +1,0 @@
-<?php
-
-namespace App\Http\Controllers\Annotations ;
-
-/**
- * @OA\Security(
- *     security={
- *         "BearerAuth": {}
- *     }),
-
- * @OA\SecurityScheme(
- *     securityScheme="BearerAuth",
- *     type="http",
- *     scheme="bearer",
- *     bearerFormat="JWT"),
-
- * @OA\Info(
- *     title="Your API Title",
- *     description="Your API Description",
- *     version="1.0.0"),
-
- * @OA\Consumes({
- *     "multipart/form-data"
- * }),
-
- *
-
- * @OA\POST(
- *     path="/api/auth/register",
- *     summary="New Request",
- *     description="",
- *         security={
- *    {       "BearerAuth": {}}
- *         },
- * @OA\Response(response="201", description="Created successfully"),
- * @OA\Response(response="400", description="Bad Request"),
- * @OA\Response(response="401", description="Unauthorized"),
- * @OA\Response(response="403", description="Forbidden"),
- *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
- * ),
- *     @OA\RequestBody(
- *         required=true,
- *         @OA\MediaType(
- *             mediaType="multipart/form-data",
- *             @OA\Schema(
- *                 type="object",
- *                 properties={
- *                     @OA\Property(property="name", type="string"),
- *                     @OA\Property(property="email", type="string"),
- *                     @OA\Property(property="password", type="string"),
- *                     @OA\Property(property="password_confirmation", type="string"),
- *                 },
- *             ),
- *         ),
- *     ),
- *     tags={"Register"},
-*),
-
-
-*/
-
- class RegisterAnnotationController {}
